# poli-gon

./: Cargo.toml  readme.md
docs/: crates.js  index.html
docs/poli_gon/: all.html  enum.CameraKind.html  enum.ObjParseError.html  enum.Object3dKind.html  enum.PowerPreference.html  index.html  sidebar-items.js  struct.BfsIterator.html  struct.BoxGeometry.html  struct.BufferGeometry.html  struct.Camera.html  struct.DfsIterator.html  struct.ForwardRenderer.html  struct.ForwardRendererOptions.html  struct.Gpu.html  struct.GpuOptions.html  struct.Mesh.html  struct.ObjParseOptions.html  struct.ObjParseResult.html  struct.ObjParser.html  struct.Object3d.html  trait.Geometry.html
docs/poli_gon/core/camera/: enum.CameraKind.html  struct.Camera.html
docs/poli_gon/core/mesh/: struct.Mesh.html
docs/poli_gon/core/object3d/: enum.Object3dKind.html  struct.BfsIterator.html  struct.DfsIterator.html  struct.Object3d.html
docs/poli_gon/geometries/box_geometry/: struct.BoxGeometry.html
docs/poli_gon/geometries/buffer_geometry/: struct.BufferGeometry.html
docs/poli_gon/geometries/geometry/: trait.Geometry.html
docs/poli_gon/renderers/forward_renderer/: struct.ForwardRenderer.html  struct.ForwardRendererOptions.html
docs/poli_gon/wgpual/gpu/: struct.Gpu.html  struct.GpuOptions.html
src/: lib.rs
src/core/: camera.rs  mesh.rs  mod.rs  object3d.rs
src/geometries/: box_geometry.rs  buffer_geometry.rs  geometry.rs  mod.rs
src/renderers/: forward_renderer.rs  mod.rs
src/renderers/shaders/: forward_renderer.wgsl
src/wgpual/: gpu.rs  mod.rs
